# panel-material-ui

./: .copier-answers.yml  .eslintrc.js  .pre-commit-config.yaml  MANIFEST.in  README.md  hatch_build.py  mkdocs.yml  pixi.toml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: build.yml  ci.yml  test.yaml
docs/reference/: panel_material_ui.md
examples/: components.py
panel_material_ui/: __init__.py
src/panel_material_ui/: __init__.py  __version.py  base.py  theme.py
src/panel_material_ui/chat/: ChatArea.jsx  __init__.py  input.py
src/panel_material_ui/layout/: Accordion.jsx  Alert.jsx  Backdrop.jsx  Card.jsx  Dialog.jsx  Divider.jsx  Modal.jsx  Paper.jsx  Tabs.jsx  base.py
src/panel_material_ui/pane/: Avatar.jsx  Breadcrumbs.jsx  Chip.jsx  List.jsx  Skeleton.jsx  base.py
src/panel_material_ui/template/: AppBar.jsx  Page.jsx  base.py
src/panel_material_ui/widgets/: Autocomplete.jsx  BoxGroup.jsx  Button.jsx  ButtonGroup.jsx  Checkbox.jsx  CircularProgress.jsx  DatePicker.jsx  DateTimePicker.jsx  FileInput.jsx  IconButton.jsx  LinearProgress.jsx  MultiChoice.jsx  NumberInput.jsx  PasswordField.jsx  RadioGroup.jsx  Rating.jsx  Select.jsx  Slider.jsx  Switch.jsx  TextArea.jsx  TextField.jsx  TimePicker.jsx  ToggleButton.jsx  ToggleIcon.jsx  __init__.py  base.py  button.py  icon.py  indicators.py  input.py  select.py  sliders.py
tests/: conftest.py  test_core.py  util.py
tests/ui/layout/: test_layout.py
tests/ui/widgets/: test_button.py  test_input.py  test_select.py  test_sliders.py
tests/widgets/: test_button.py  test_select.py
